mas ajustes visuales

--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -87,42 +87,18 @@
 		<h1>COBERTURAS</h1>
 		<section class="coberturas">
 			<div class="fondo__cobertura">
-				<div class="coberturas__iconos">
-					<p class="moto">
-						<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-motorbike" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round"stroke-linejoin="round">
-				        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-					    <circle cx="5" cy="16" r="3" />
-					    <circle cx="19" cy="16" r="3" />
-					    <path d="M7.5 14h5l4 -4h-10.5m1.5 4l4 -4" />
-					    <path d="M13 6h2l1.5 3l2 4" />
-					    </svg>
-					</p>
+				<div class="coberturas__moto">
+					<p class="coberturaTitulos">MOTO:</p>
 					<p>Seguro de responsabilidad civil. No cubre daños materiales quedando los mismos a cargo del cliente. Todas las motos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 				
-				<div class="coberturas__iconos">
-					<p class="auto">
-						<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-car" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-					    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-					    <circle cx="7" cy="17" r="2" />
-					    <circle cx="17" cy="17" r="2" />
-					    <path d="M5 17h-2v-6l2 -5h9l4 5h1a2 2 0 0 1 2 2v4h-2m-4 0h-6m-6 -6h15m-6 0v-5" />
-					    </svg>
-					</p>
+				<div class="coberturas__auto">
+					<p class="coberturaTitulos">AUTO:</p>
 					<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 
-				<div class="coberturas__iconos">
-					<p class="camioneta">
-						<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tir" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-						<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-						<circle cx="5" cy="17" r="2" />
-					    <circle cx="17" cy="17" r="2" />
-					    <path d="M7 18h8m4 0h2v-6a5 7 0 0 0 -5 -7h-1l1.5 7h4.5" />
-					    <path d="M12 18v-13h3" />
-	         	 		<polyline points="3 17 3 12 12 12" />
-					    </svg>
-					</p>
+				<div class="coberturas__camioneta">
+					<p class="coberturaTitulos">CAMIONETA:</p>
 					<p>Seguro contra todo riesgo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todas las camionetas cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 			</div>
