--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALPHA-Coberturas</title>
+	<title>Coberturas</title>
+	<meta name="description" content="Contamos con convenio de seguros, con rastreo satelital, y botón de emergencia en caso de necesitar auxilio y no poder comunicarte.">
+	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
@@ -24,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link active" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
@@ -47,7 +49,7 @@
 	<!--Inicia header-->
 	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,15 +59,15 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header.jpg" class="d-block w-100" alt="Todos los vehículos cuentan con seguro al día">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header2.jpg" class="d-block w-100" alt="Botón de emergencia">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header3.jpg" class="d-block w-100" alt="Servicio se rastreo satelital">
 			    </div>
 
 			  </div>
@@ -84,7 +86,7 @@
 	</header>
 	<!--Fin header-->
 	<main>
-		<h1>COBERTURAS</h1>
+		<h1>Contamos con póliza de seguro + rastreo satelital + botón de emergencia</h1>
 		<section class="coberturas">
 			<div class="fondo__cobertura">
 				<div class="coberturas__moto">
@@ -99,7 +101,7 @@
 
 				<div class="coberturas__camioneta">
 					<p class="coberturaTitulos">CAMIONETA:</p>
-					<p>Seguro contra todo riesgo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todas las camionetas cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
+					<p>Seguro contra todo riesgo con franquicia hasta $30.000. Todas las camionetas cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 			</div>
 		</section>
