--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALPHA-Indice</title>
+	<meta name="description" content="Alquiler de autos, camionetas y motos, mantenimiento y service al día, 
+	unidades nuevas, amplia variedad de marcas y modelos. confort y calidad, al mejor precio.">
+	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<title>RentMotors empresa rentadora de vehículos en CABA</title>
 </head>
 
 <link rel="shortcut icon" href="./img/favicon.jfif">
@@ -27,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link active" aria-current="page" href="./index.html">INDICE</a>
+          <a class="animacion__navbar nav-link active" aria-current="page" href="./index.html">FORMULARIO</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link" aria-current="page" href="./pages/coberturas.html">COBERTURAS</a>
@@ -50,7 +53,7 @@
 	<!--Inicia header-->
 	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -60,15 +63,15 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="./img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="./img/header.jpg" class="d-block w-100" alt="Contamos con una flota de mas de 200 vehÍculos">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="./img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="./img/header2.jpg" class="d-block w-100" alt="Amplia variedad de marcas y modelos">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="./img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="./img/header3.jpg" class="d-block w-100" alt="reservá tu vehículo en 3 pasos">
 			    </div>
 
 			  </div>
@@ -88,7 +91,7 @@
 	<!--Fin header-->
 
 	<main>
-		<h1>Alpha - RentMotors</h1>
+		<h1>Completá el formulario y reservá tu unidad en el acto</h1>
 
 		<!--Formulario-->
 
