--- a/pages/flota.html
+++ b/pages/flota.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALPHA-Flota</title>
+	<title>Nuestra Flota</title>
+	<meta name="description" content="Amplia variedad de marcas y modelos, mantenimiento al día.">
+	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
@@ -25,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
@@ -49,7 +51,7 @@
 	<!--Inicia header-->
 	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -59,15 +61,16 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header.jpg" class="d-block w-100" alt="Autos 100% verificados por nosotros">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header2.jpg" class="d-block w-100" alt="Todas las marcas y modelos">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header3.jpg" class="d-block w-100" alt="Lo podes retirar por la empresa o podes pedir
+				  que te lo llevemos a tu casa.">
 			    </div>
 
 			  </div>
@@ -86,12 +89,12 @@
 	</header>
 	<!--Fin header-->
 		<main>
-			<h1>NUESTRA FLOTA</h1>
+			<h1>Tenemos una amplia variedad de marcas y modelos</h1>
 			<section class="flota">
 				<div class="grid__autos">
 							<a class="borde" href="#">
 							<div class="card auto1 imagen__flota">
-								<img src="../img/auto1.jpg" class="card-img-top" alt="...">
+								<img src="../img/auto1.jpg" class="card-img-top" alt="Renault Logan sedan 4 puertas color gris plata, caja manual, levantavidrios y espejos eléctricos">
 								<div class="card-body">
 								  <p class="card-text auto__pie"><code>Renault Logan</code></p>
 								</div>
@@ -100,7 +103,7 @@
 
 							<a class="borde" href="">
 								<div class="card auto2 imagen__flota">
-									<img src="../img/auto2.png" class="card-img-top" alt="...">
+									<img src="../img/auto2.png" class="card-img-top" alt="Volkswagen gol 5 puertas gris oscuro, caja manual, levantavidrios y retrovisores manuales">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>VolksWagen Gol</code></p>
 									</div>
@@ -109,7 +112,7 @@
 
 							<a class="borde" href="">
 								<div class="card auto3 imagen__flota">
-									<img src="../img/auto3.png" class="card-img-top" alt="...">
+									<img src="../img/auto3.png" class="card-img-top" alt="Nissan sentra, color rojo, sedan 4 puertas, caja automática, llave de presencia, botón de arranque, y sensor de estacionamiento">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Nissan Sentra</code></p>
 									</div>
@@ -118,7 +121,7 @@
 
 							<a class="borde" href="">
 								<div class="card cam1 imagen__flota">
-									<img src="../img/camioneta1.png" class="card-img-top" alt="...">
+									<img src="../img/camioneta1.png" class="card-img-top" alt="Toyota Hilux, color roja, todoterreno, 4 puertas con caja descubierta, caja manual, 6 velocidades">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Toyota Hilux</code></p>
 									</div>
@@ -127,7 +130,8 @@
 
 							<a class="borde" href="">
 								<div class="card cam2 imagen__flota">
-									<img src="../img/camioneta2.png" class="card-img-top" alt="...">
+									<img src="../img/camioneta2.png" class="card-img-top" alt="Chevrolet tracker, color gris plata, caja automática, camara trasera para estacionar, ideal para familia
+									levantavidrios eléctrico, pantalla táctil">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Chevrolet Tracker</code></p>
 									</div>
@@ -136,7 +140,8 @@
 
 							<a class="borde" href="">
 								<div class="card cam3 imagen__flota">
-									<img src="../img/camioneta3.png" class="card-img-top" alt="...">
+									<img src="../img/camioneta3.png" class="card-img-top" alt="Nissan H1, color gris plata, para 9 personas, ejecutiva, los asientos se pueden enfrentar, 
+									caja automática, cédula de uso privado, amplio espacio y muy cómoda">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Nissan H1</code></p>
 									</div>
@@ -145,7 +150,7 @@
 
 							<a class="borde" href="">
 								<div class="card moto1 imagen__flota">
-									<img src="../img/moto1.jpg" class="card-img-top" alt="...">
+									<img src="../img/moto1.jpg" class="card-img-top" alt="Moto Zanella, 150cc Monocilíndrico, 4 tiempos, 2 válvulas, OHV, refrigerado por aire">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Zanella</code></p>
 									</div>
@@ -154,7 +159,7 @@
 
 							<a class="borde" href="">
 								<div class="card moto2 imagen__flota">
-									<img src="../img/moto2.png" class="card-img-top" alt="...">
+									<img src="../img/moto2.png" class="card-img-top" alt="Moto Honda, color roja y negra, 600cc Cuatro cilindros en línea, 4 tiempos, 16 válvulas, DOHC, refrigerado por líquido">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Honda</code></p>
 									</div>
@@ -163,7 +168,7 @@
 							
 							<a class="borde" href="">
 								<div class="card moto3 imagen__flota">
-									<img src="../img/moto3.png" class="card-img-top" alt="...">
+									<img src="../img/moto3.png" class="card-img-top" alt="Scooter, color roja y negra, 78cc Monocilíndrico, 4 tiempos, 2 válvulas, OHC, refrigerado por aire">
 									<div class="card-body">
 									<p class="card-text auto__pie"><code>Scooter</code></p>
 									</div>
