--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ALPHA-Nosotros</title>
+	<meta name="description" content="Somos una empresa familiar, instalada en el rubro desde hace mas de 30 años,
+	reconocidos por nuestra confiabilidad y seguridad.">
+	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
@@ -24,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
@@ -48,7 +51,7 @@
 	<!--Inicia header-->
 	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,15 +61,15 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header.jpg" class="d-block w-100" alt="Somos una empresa familiar de mas de 30 años en el rubro">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header2.jpg" class="d-block w-100" alt="Ofrecemos seguridad y confianza">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header3.jpg" class="d-block w-100" alt="Si no podes pasar a retirarlo por la empresa, te lo llevamos a tu casa">
 			    </div>
 
 			  </div>
@@ -86,7 +89,7 @@
 	<!--Fin header-->
 
 	<main class="nosotros__vacio">
-		<h1>NOSOTROS</h1>
+		<h1>Sobre nosotros</h1>
 		<p>Somos una empresa conformada por 16 empleados, para garantizar la mejor calidad para nuestros vehiculos. Contamos con sector de mecánica,
 			donde revisamos el funcionamiento de nuestra flota, contamos con lavadero, para asegurarnos que recibas tu vehículo en perfectas condiciones,
 			también te entregamos el vehículo con tanque lleno y una grilla con los detalles que pueda tener el vehículo, para garantizar tu tranqulidad.
@@ -104,7 +107,7 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
 			      <div class="accordion-body">
-			      <p><code>¿ME COBRAN EL LAVADO? <br> El vehículo deber ser entregado en las consiciones que se entregó, en caso de que detectemos
+			      <p><code>¿ME COBRAN EL LAVADO? <br> El vehículo deber ser devuelto en las consiciones que se entregó, en caso de que detectemos
 					restos de pelo de animal, tierra, cenizas de cigarrillo, basura, etc el lavado queda a cargo del cliente.</code></p>		      
 				  <p><code> <br> ¿Tienen sillas para bebés? <br> Si, las sillas para bebés se solicitan al momento del alquler del vehículo y van sin cargo. </code></p>		      
 				  <p><code> <br> ¿Me cobran las multas? <br> Si, todas las infracciones van a cargo del cliente. </code></p>
@@ -131,8 +134,9 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
 			      <div class="accordion-body">
-			      	<p><code>Nuestro objetivo es dar el mejor servicio a nuestros clientes y fomentar la responsabilidad y el compromiso. Nuestro proyecto es ampliar nuestras sucursales hscia el
-						inerior del país y posteriormente al exterior.
+			      	<p><code>Nuestro objetivo es dar el mejor servicio a nuestros clientes y fomentar la responsabilidad y el compromiso. Nuestro proyecto es ampliar nuestras sucursales hacia el
+						interior del país, para eso, trabajamos día a día con la exigencia que nuestras ambiciones demandan
+						para que nos vuelvas a elegir.
 					</code></p>
 			      </div>
 			    </div>
@@ -145,8 +149,11 @@
 			    </h3>
 			    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
 			      <div class="accordion-body">
-			      	<p><code>Podes encontrarnos en: <br>Rivadavia y 9 de Julio (CABA) <br>  Av. Crovara y Av. San martín (Villa Madero) <br> Av. Hipólito Yrigoyen 1600 (Morón) <br> </code></p>
-			      </div>
+			      	<p><code>Podes encontrarnos en: </code></p>
+					<p><code>AV. Rivadavia y 9 de Julio (CABA)</code></p>
+					<p><code>Av. Crovara y Av. San martín (Villa Madero)</code></p>
+					<p><code>Av. Hipólito Yrigoyen 1600 (Morón)</code></p>
+				</div>
 			    </div>
 			  </div>
 		</div>
