--- a/pages/precios.html
+++ b/pages/precios.html
@@ -3,7 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALPHA-Precios</title>
+	<title>Precios</title>
+	<meta name="description" content="Manejamos los mejores precios del mercado, podes pagar en efectivo,
+	pesos argentinos o moneda extranjera. Si abonás con tarjeta, aceptamos mastercard y visa hasta 3 cuotas sin interés, 6 cuotas 10% 
+	de interés y 12 o mas cuotas 20% de interés. También aceptamos mercado pago">
+	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
@@ -24,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">INDICE</a>
+          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
         </li>
         <li class="nav-item">
           <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
@@ -48,7 +52,7 @@
 	<!--Inicia header-->
 	<header class="header__image">
 		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10" data-bs-ride="carousel">
+		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
 			  <div class="carousel-indicators">
 			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -58,15 +62,15 @@
 
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header.jpg" class="d-block w-100" alt="Precios accesibles">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header2.jpg" class="d-block w-100" alt="Unidades confiables">
 			    </div>
 
 			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Llevate tu auto">
+			      <img src="../img/header3.jpg" class="d-block w-100" alt="Aceptamos efectivo, mastercard, visa, y mercado pago, débito y crédito">
 			    </div>
 
 			  </div>
@@ -86,7 +90,7 @@
 	<!--Fin header-->
 
 	<main id="altura__precios">
-		<h1>PRECIOS</h1>
+		<h1>Tarifa por día, según tu unidad</h1>
 		<div class="tabla__ubicacion">
 			<table class="tabla__precios" border="5px" cellpadding="10px" cellspacing="2px">
 				<tr>
@@ -96,17 +100,17 @@
 				</tr>
 				<tr>
 					<td>Auto</td>
-					<td>Dia</td>
+					<td class="diaPrecio">Dia</td>
 					<td>$2500</td>
 				</tr>
 				<tr>
 					<td>Moto</td>
-					<td>Día</td>
+					<td class="diaPrecio">Día</td>
 					<td>$1200</td>
 				</tr>
 				<tr>
 					<td>Camioneta</td>
-					<td>Día</td>
+					<td class="diaPrecio">Día</td>
 					<td>$4000</td>
 				</tr>
 			</table>
@@ -133,10 +137,10 @@
 			      <div class="accordion-body">
 			      <p><code> Aceptamos efectivo (Pesos argentinos, dólares -valor oficial-, euros -valor oficial-), Tarjeta de crédito o débito visa mastercard, Mercado pago </code></p>		      
 			      <div class="logos__pagos"> 
-			     		<img src="../precios/efectivo.png" alt="efectivo"> 
-				      <img src="../precios/mastercard.svg" alt="mastercard">
-				      <img src="../precios/visa.svg" alt="visa">
-				      <img src="../precios/mercadopago.svg" alt="mercado pago">
+			     		<img src="../precios/efectivo.png" alt="Podes pagar en efectivo, pesos argentinos, o moneda extranjera"> 
+				      <img src="../precios/mastercard.svg" alt="Podes pagar con mastercard">
+				      <img src="../precios/visa.svg" alt="Podes pagar con visa">
+				      <img src="../precios/mercadopago.svg" alt="Aceptamos mercado pago">
 			      </div>
 			      </div>
 			    </div>
