--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -91,17 +91,17 @@
 			<div class="fondo__cobertura">
 				<div class="coberturas__moto">
 					<p class="coberturaTitulos">MOTO:</p>
-					<p>Seguro de responsabilidad civil. No cubre daños materiales quedando los mismos a cargo del cliente. Todas las motos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
+					<p>Seguro de responsabilidad civil. No cubre daños materiales. Todas las motos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 				
 				<div class="coberturas__auto">
 					<p class="coberturaTitulos">AUTO:</p>
-					<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
+					<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 
 				<div class="coberturas__camioneta">
 					<p class="coberturaTitulos">CAMIONETA:</p>
-					<p>Seguro contra todo riesgo con franquicia hasta $30.000. Todas las camionetas cuentan con un botón de emergencia, en caso de solicitar acarreo y no tener forma de comunicarse via telefónica.</p>
+					<p>Seguro contra todo riesgo con franquicia hasta $30.000. Todas las camionetas cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
 				</div>
 			</div>
 		</section>
