--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<form action="">
 				<div class="formulario__uno">
 					<div class="email">
-						<label for="correo">Email</label>
+						<label for="correo">&nbsp;Email</label>
 						<input type="email" id="correo" placeholder="mail@ejemplo.com">
 					</div>
 					<fieldset class="formulario__pedido" >
@@ -140,7 +140,7 @@
 				<!--Consultas-->
 				
 					<div class="formulario__dos">
-							<label for="consulta">Consultas</label>
+							<label for="consulta">&nbsp;Consultas:</label>
 							<textarea class="formulario__consulta" name="" id="" cols="30" rows="10"></textarea>
 
 							<!--botones-->
