--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
 	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
   	<div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
+    	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha, acceso al inicio">
     </a>
     <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -159,6 +159,7 @@
 		</div>
 
 <!--finaliza acordeon-->
+
 	</main>
 	<footer>
 		<div class="pie__footer">
