--- a/pages/precios.html
+++ b/pages/precios.html
@@ -20,7 +20,7 @@
 	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
   	<div class="container-fluid">
     <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha">
+    	<img id="indice__logo" src="../img/logo.jfif" alt="logo de Alpha, acceso al inicio">
     </a>
     <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -137,10 +137,10 @@
 			      <div class="accordion-body">
 			      <p><code> Aceptamos efectivo (Pesos argentinos, dólares -valor oficial-, euros -valor oficial-), Tarjeta de crédito o débito visa mastercard, Mercado pago </code></p>		      
 			      <div class="logos__pagos"> 
-			     		<img src="../precios/efectivo.png" alt="Podes pagar en efectivo, pesos argentinos, o moneda extranjera"> 
-				      <img src="../precios/mastercard.svg" alt="Podes pagar con mastercard">
-				      <img src="../precios/visa.svg" alt="Podes pagar con visa">
-				      <img src="../precios/mercadopago.svg" alt="Aceptamos mercado pago">
+			     		<img src="../img/precios/efectivo.png" alt="Podes pagar en efectivo, pesos argentinos, o moneda extranjera"> 
+				      <img src="../img/precios/mastercard.svg" alt="Podes pagar con mastercard">
+				      <img src="../img/precios/visa.svg" alt="Podes pagar con visa">
+				      <img src="../img/precios/mercadopago.svg" alt="Aceptamos mercado pago">
 			      </div>
 			      </div>
 			    </div>
