--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -113,6 +113,7 @@
 				  <p><code> <br> ¿Me cobran las multas? <br> Si, todas las infracciones van a cargo del cliente. </code></p>
 			    </div>
 			  </div>
+			</div>
 			  <div class="accordion-item">
 			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
 			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
