--- a/pages/flota.html
+++ b/pages/flota.html
@@ -15,184 +15,185 @@
 <body>
 	<div class="grid__flota">
 
-	<!--Inicia NAV-->
-	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
-  	<div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
-    </a>
-    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link active" href="../pages/flota.html">FLOTA</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
-        </li>
-         <li class="nav-item">
-          <a class="animacion__navbar nav-link " href="../pages/nosotros.html">NOSOTROS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+			<!--Inicia NAV-->
+		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="../index.html">
+					<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+				</a>
+				<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+					<a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
+					</li>
+					<li class="nav-item">
+					<a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
+					</li>
+					<li class="nav-item">
+					<a class="animacion__navbar nav-link active" href="../pages/flota.html">FLOTA</a>
+					</li>
+					<li class="nav-item">
+					<a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
+					</li>
+					<li class="nav-item">
+					<a class="animacion__navbar nav-link " href="../pages/nosotros.html">NOSOTROS</a>
+					</li>
+				</ul>
+				</div>
+			</div>
+		</nav>
 
-	<!--Finaliza nav-->
+			<!--Finaliza nav-->
 
-	<!--Inicia header-->
-	<header class="header__image">
-		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
+			<!--Inicia header-->
+		<header class="header__image">
+				<!--Inicia Carousel-->
+			<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
 
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
+				<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img src="../img/header.jpg" class="d-block w-100" alt="Autos 100% verificados por nosotros">
+						</div>
 
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Autos 100% verificados por nosotros">
-			    </div>
+						<div class="carousel-item">
+							<img src="../img/header2.jpg" class="d-block w-100" alt="Todas las marcas y modelos">
+						</div>
 
-			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Todas las marcas y modelos">
-			    </div>
+						<div class="carousel-item">
+						<img src="../img/header3.jpg" class="d-block w-100" alt="Lo podes retirar por la empresa o podes pedir
+						que te lo llevemos a tu casa.">
+						</div>
 
-			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Lo podes retirar por la empresa o podes pedir
-				  que te lo llevemos a tu casa.">
-			    </div>
+					</div>
 
-			  </div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+					</button>
 
-			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Previous</span>
-			  </button>
-
-			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Next</span>
-			  </button>
-		</div>
-		<!--Finaliza Carousel-->
-	</header>
-	<!--Fin header-->
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+					</button>
+			</div>
+				<!--Finaliza Carousel-->
+		</header>
+			<!--Fin header-->
 		<main>
 			<h1>Tenemos una amplia variedad de marcas y modelos</h1>
 			<section class="flota">
 				<div class="grid__autos">
-							<a class="borde" href="#">
-							<div class="card auto1 imagen__flota">
-								<img src="../img/auto1.jpg" class="card-img-top" alt="Renault Logan sedan 4 puertas color gris plata, caja manual, levantavidrios y espejos eléctricos">
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card auto1 imagen__flota">
+							<img src="../img/auto1.jpg" class="card-img-top" alt="Renault Logan sedan 4 puertas color gris plata, caja manual, levantavidrios y espejos eléctricos">
 								<div class="card-body">
-								  <p class="card-text auto__pie"><code>Renault Logan</code></p>
+									<p class="card-text auto__pie"><code>Renault Logan</code></p>
 								</div>
+						</div>
+					</a>
+
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card auto2 imagen__flota">
+							<img src="../img/auto2.png" class="card-img-top" alt="Volkswagen gol 5 puertas gris oscuro, caja manual, levantavidrios y retrovisores manuales">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>VolksWagen Gol</code></p>
 							</div>
-							</a>
+						</div>
+					</a>
 
-							<a class="borde" href="">
-								<div class="card auto2 imagen__flota">
-									<img src="../img/auto2.png" class="card-img-top" alt="Volkswagen gol 5 puertas gris oscuro, caja manual, levantavidrios y retrovisores manuales">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>VolksWagen Gol</code></p>
-									</div>
-								</div>
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card auto3 imagen__flota">
+							<img src="../img/auto3.png" class="card-img-top" alt="Nissan sentra, color rojo, sedan 4 puertas, caja automática, llave de presencia, botón de arranque, y sensor de estacionamiento">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Nissan Sentra</code></p>
+							</div>
+						</div>	
+					</a>
 
-							<a class="borde" href="">
-								<div class="card auto3 imagen__flota">
-									<img src="../img/auto3.png" class="card-img-top" alt="Nissan sentra, color rojo, sedan 4 puertas, caja automática, llave de presencia, botón de arranque, y sensor de estacionamiento">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Nissan Sentra</code></p>
-									</div>
-								</div>	
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card cam1 imagen__flota">
+							<img src="../img/camioneta1.png" class="card-img-top" alt="Toyota Hilux, color roja, todoterreno, 4 puertas con caja descubierta, caja manual, 6 velocidades">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Toyota Hilux</code></p>
+							</div>
+						</div>
+					</a>
 
-							<a class="borde" href="">
-								<div class="card cam1 imagen__flota">
-									<img src="../img/camioneta1.png" class="card-img-top" alt="Toyota Hilux, color roja, todoterreno, 4 puertas con caja descubierta, caja manual, 6 velocidades">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Toyota Hilux</code></p>
-									</div>
-								</div>
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card cam2 imagen__flota">
+							<img src="../img/camioneta2.png" class="card-img-top" alt="Chevrolet tracker, color gris plata, caja automática, camara trasera para estacionar, ideal para familia
+							levantavidrios eléctrico, pantalla táctil">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Chevrolet Tracker</code></p>
+							</div>
+						</div>	
+					</a>
 
-							<a class="borde" href="">
-								<div class="card cam2 imagen__flota">
-									<img src="../img/camioneta2.png" class="card-img-top" alt="Chevrolet tracker, color gris plata, caja automática, camara trasera para estacionar, ideal para familia
-									levantavidrios eléctrico, pantalla táctil">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Chevrolet Tracker</code></p>
-									</div>
-								</div>	
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card cam3 imagen__flota">
+							<img src="../img/camioneta3.png" class="card-img-top" alt="Nissan H1, color gris plata, para 9 personas, ejecutiva, los asientos se pueden enfrentar, 
+							caja automática, cédula de uso privado, amplio espacio y muy cómoda">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Nissan H1</code></p>
+							</div>
+						</div>
+					</a>
 
-							<a class="borde" href="">
-								<div class="card cam3 imagen__flota">
-									<img src="../img/camioneta3.png" class="card-img-top" alt="Nissan H1, color gris plata, para 9 personas, ejecutiva, los asientos se pueden enfrentar, 
-									caja automática, cédula de uso privado, amplio espacio y muy cómoda">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Nissan H1</code></p>
-									</div>
-								</div>
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card moto1 imagen__flota">
+							<img src="../img/moto1.jpg" class="card-img-top" alt="Moto Zanella, 150cc Monocilíndrico, 4 tiempos, 2 válvulas, OHV, refrigerado por aire">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Zanella</code></p>
+							</div>
+						</div>
+					</a>
 
-							<a class="borde" href="">
-								<div class="card moto1 imagen__flota">
-									<img src="../img/moto1.jpg" class="card-img-top" alt="Moto Zanella, 150cc Monocilíndrico, 4 tiempos, 2 válvulas, OHV, refrigerado por aire">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Zanella</code></p>
-									</div>
-								</div>
-							</a>
-
-							<a class="borde" href="">
-								<div class="card moto2 imagen__flota">
-									<img src="../img/moto2.png" class="card-img-top" alt="Moto Honda, color roja y negra, 600cc Cuatro cilindros en línea, 4 tiempos, 16 válvulas, DOHC, refrigerado por líquido">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Honda</code></p>
-									</div>
-								</div>
-							</a>
-							
-							<a class="borde" href="">
-								<div class="card moto3 imagen__flota">
-									<img src="../img/moto3.png" class="card-img-top" alt="Scooter, color roja y negra, 78cc Monocilíndrico, 4 tiempos, 2 válvulas, OHC, refrigerado por aire">
-									<div class="card-body">
-									<p class="card-text auto__pie"><code>Scooter</code></p>
-									</div>
-								</div>
-							</a>
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card moto2 imagen__flota">
+							<img src="../img/moto2.png" class="card-img-top" alt="Moto Honda, color roja y negra, 600cc Cuatro cilindros en línea, 4 tiempos, 16 válvulas, DOHC, refrigerado por líquido">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Honda</code></p>
+							</div>
+						</div>
+					</a>
+					
+					<a class="borde" href="../pages/reserva.html">
+						<div class="card moto3 imagen__flota">
+							<img src="../img/moto3.png" class="card-img-top" alt="Scooter, color roja y negra, 78cc Monocilíndrico, 4 tiempos, 2 válvulas, OHC, refrigerado por aire">
+							<div class="card-body">
+							<p class="card-text auto__pie"><code>Scooter</code></p>
+							</div>
+						</div>
+					</a>
 				</div>
 			</section>
 		</main>
+
 		<aside>
-				<div >
-						<ul>
-							<li>-----STOCK-----</li>
-							<li>RENAULT LOGAN (1)</li>
-							<li>VW GOL TREND (2)</li>
-							<li>NISSAN SENTRA (3)</li>
-							<li>TOYOTA HILUX (1)</li>
-							<li>CHEVROLET TRACKER (2)</li>
-							<li>NISSAN H1 EJECUTIVA (1)</li>
-							<li>MOTO HONDA (1)</li>
-							<li>MOTO ZANELLA (2)</li>
-							<li>MOTO SCOOTER (2)</li>
-						</ul>
-				</div>
+			<div >
+				<ul>
+					<li>-----STOCK-----</li>
+					<li>RENAULT LOGAN (1)</li>
+					<li>VW GOL TREND (2)</li>
+					<li>NISSAN SENTRA (3)</li>
+					<li>TOYOTA HILUX (1)</li>
+					<li>CHEVROLET TRACKER (2)</li>
+					<li>NISSAN H1 EJECUTIVA (1)</li>
+					<li>MOTO HONDA (1)</li>
+					<li>MOTO ZANELLA (2)</li>
+					<li>MOTO SCOOTER (2)</li>
+				</ul>
+			</div>
 		</aside>
+
 		<footer>
 			<div class="pie__footer">
 				<div>
