--- a/index.html
+++ b/index.html
@@ -16,179 +16,178 @@
 <link rel="stylesheet" href="./css/main.css">
 
 <body>
-
-	<!--Inicia NAV-->
-
-	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
-  	<div class="container-fluid">
-		<a class="navbar-brand" href="./index.html">
-			<img id="indice__logo" src="./img/logo.png" alt="logo de Alpha, acceso al inicio">
-		</a>
-    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      	<li class="nav-item">
-          <a class="animacion__navbar nav-link active" aria-current="page" href="./index.html">FORMULARIO</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="./pages/coberturas.html">COBERTURAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="./pages/flota.html">FLOTA</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="./pages/precios.html">PRECIOS</a>
-        </li>
-         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="./pages/nosotros.html">NOSOTROS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-	<!--Finaliza nav-->
-
-	<!--Inicia header-->
-	<header class="header__image">
-		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
-
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="./img/header.jpg" class="d-block w-100" alt="Contamos con una flota de mas de 200 vehÍculos">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="./img/header2.jpg" class="d-block w-100" alt="Amplia variedad de marcas y modelos">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="./img/header3.jpg" class="d-block w-100" alt="reservá tu vehículo en 3 pasos">
-			    </div>
-
-			  </div>
-
-			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Previous</span>
-			  </button>
-
-			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Next</span>
-			  </button>
+	<div id="grid">
+		<!--Inicia NAV-->
+		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="./index.html">
+					<img id="indice__logo" src="./img/logo.png" alt="logo de Alpha, acceso al inicio">
+				</a>
+			<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+				<li class="nav-item">
+				<a class="animacion__navbar nav-link active" aria-current="page" href="./index.html">FORMULARIO</a>
+				</li>
+				<li class="nav-item">
+				<a class="animacion__navbar nav-link" aria-current="page" href="./pages/coberturas.html">COBERTURAS</a>
+				</li>
+				<li class="nav-item">
+				<a class="animacion__navbar nav-link" href="./pages/flota.html">FLOTA</a>
+				</li>
+				<li class="nav-item">
+				<a class="animacion__navbar nav-link" href="./pages/precios.html">PRECIOS</a>
+				</li>
+				<li class="nav-item">
+				<a class="animacion__navbar nav-link" href="./pages/nosotros.html">NOSOTROS</a>
+				</li>
+			</ul>
+			</div>
 		</div>
-		<!--Finaliza Carousel-->
-	</header>
-	<!--Fin header-->
+	</nav>
+		<!--Finaliza nav-->
 
-	<main>
-		<h1>Completá el formulario y reservá tu unidad en el acto</h1>
+		<!--Inicia header-->
+		<header class="header__image">
+			<!--Inicia Carousel-->
+			<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
-		<!--Formulario-->
-
-		<section class="formulario">
-			<form action="">
-				<div class="formulario__uno">
-					<div class="email">
-						<label for="correo">&nbsp;Email</label>
-						<input type="email" id="correo" placeholder="mail@ejemplo.com">
-					</div>
-					<fieldset class="formulario__pedido" >
-						<legend>Info de pedido:</legend>
-						<div>
-							<label for="auto">Auto</label>
-							<input type="checkbox" id="auto">
-						</div>
-						<div>
-							<label for="moto">Moto</label>
-							<input type="checkbox" id="moto">
-						</div>
-						<div>
-							<label for="camioneta">Camioneta</label>
-							<input type="checkbox" id="camioneta">
-						</div>
-					</fieldset>
-					<fieldset class="formulario__retiro">
-						<legend>Info de retiro:</legend>
-						<div>
-							<label for="casa">Recibir en domicilio</label>
-							<input type="radio" id="casa" name="retiro">
-						</div>
-						<div>
-							<label for="empresa">Retiro en la empresa</label>
-							<input type="radio" id="empresa" name="retiro">
-						</div>
-						<div>
-							<label for="provincia">Provincia</label>
-							<select name="" id="">
-								<option value="">CABA</option>
-								<option value="">GBA</option>
-							</select>
-						</div>
-						</fieldset>
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 				</div>
 
-				<!--Consultas-->
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					<img src="./img/header.jpg" class="d-block w-100" alt="Contamos con una flota de mas de 200 vehÍculos">
+					</div>
+
+					<div class="carousel-item">
+					<img src="./img/header2.jpg" class="d-block w-100" alt="Amplia variedad de marcas y modelos">
+					</div>
+
+					<div class="carousel-item">
+					<img src="./img/header3.jpg" class="d-block w-100" alt="reservá tu vehículo en 3 pasos">
+					</div>
+
+				</div>
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+			<!--Finaliza Carousel-->
+		</header>
+		<!--Fin header-->
+
+		<main>
+			<h1>Completá el formulario y reservá tu unidad en el acto</h1>
+
+			<!--Formulario-->
+
+			<section class="formulario">
+				<form action="">
+					<div class="formulario__uno">
+						<div class="email">
+							<label for="correo">&nbsp;Email</label>
+							<input type="email" id="correo" placeholder="mail@ejemplo.com">
+						</div>
+						<fieldset class="formulario__pedido" >
+							<legend>Info de pedido:</legend>
+							<div>
+								<label for="auto">Auto</label>
+								<input type="checkbox" id="auto">
+							</div>
+							<div>
+								<label for="moto">Moto</label>
+								<input type="checkbox" id="moto">
+							</div>
+							<div>
+								<label for="camioneta">Camioneta</label>
+								<input type="checkbox" id="camioneta">
+							</div>
+						</fieldset>
+						<fieldset class="formulario__retiro">
+							<legend>Info de retiro:</legend>
+							<div>
+								<label for="casa">Recibir en domicilio</label>
+								<input type="radio" id="casa" name="retiro">
+							</div>
+							<div>
+								<label for="empresa">Retiro en la empresa</label>
+								<input type="radio" id="empresa" name="retiro">
+							</div>
+							<div>
+								<label for="provincia">Provincia</label>
+								<select name="" id="">
+									<option value="">CABA</option>
+									<option value="">GBA</option>
+								</select>
+							</div>
+							</fieldset>
+					</div>
+
+					<!--Consultas-->
+					
+						<div class="formulario__dos">
+								<label for="consulta">&nbsp;Consultas:</label>
+								<textarea class="formulario__consulta" name="" id="" cols="30" rows="10"></textarea>
+
+								<!--botones-->
+
+								<div class="botones">
+									<input class="formulario__cancelar" type="reset" value="Cancelar"> <!--Boton de cancelar-->
+									<input class="formulario__enviar" type="submit" value="Enviar">  <!--Boton de enviar-->
+								</div>
+						</div>
+				</form>
+
+					<!--Mapa-->
+
+						<div>
+							<h2>UBICACIÓN:</h2>
+								<div class="mapa__ubicacion">
+									<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8317195252894!2d-58.38375288502698!3d-34.60841656525324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad03e68f13b%3A0x77d2b0d75f15235b!2sAv.%209%20de%20Julio%20%26%20Av.%20Rivadavia%2C%20C1009%20CABA!5e0!3m2!1ses!2sar!4v1655262161354!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+								</div>
+						</div>
+			</section>
+		</main>
+
+		<!--Footer-->
+
+		<footer>
+			<div class="pie__footer">
+				<div>
+					<p>Seguinos en nuestras redes sociales:</p>
+				</div>
+
+				<div class="img-footer">
+					<a href="https://facebook.com" target="_blank">
+						<img class="redesSociales" src="./img/facebook.png" alt="seguinos en facebook">
+					</a>
+						<a href="https://instagram.com" target="_blank">
+						<img src="./img/instagram.png" alt="seguinos en instagram">
+					</a>
+						<a href="https://twitter.com" target="_blank">
+						<img class="redesSociales" src="./img/twitter.png" alt="seguinos en twitter">
+					</a>
+				</div>
 				
-					<div class="formulario__dos">
-							<label for="consulta">&nbsp;Consultas:</label>
-							<textarea class="formulario__consulta" name="" id="" cols="30" rows="10"></textarea>
-
-							<!--botones-->
-
-							<div class="botones">
-								<input class="formulario__cancelar" type="reset" value="Cancelar"> <!--Boton de cancelar-->
-								<input class="formulario__enviar" type="submit" value="Enviar">  <!--Boton de enviar-->
-							</div>
-					</div>
-			</form>
-
-				<!--Mapa-->
-
-					<div>
-						<h2>UBICACION</h2>
-							<div class="mapa__ubicacion">
-								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8317195252894!2d-58.38375288502698!3d-34.60841656525324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccad03e68f13b%3A0x77d2b0d75f15235b!2sAv.%209%20de%20Julio%20%26%20Av.%20Rivadavia%2C%20C1009%20CABA!5e0!3m2!1ses!2sar!4v1655262161354!5m2!1ses!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-							</div>
-					</div>
-		</section>
-	</main>
-
-	<!--Footer-->
-
-	<footer>
-		<div class="pie__footer">
-
-			<div>
-				<p>Seguinos en nuestras redes sociales:</p>
+				<div>
+					<p>Derechos reservados Alpha - RentMotors © 2022</p>
+				</div>
 			</div>
-
-			<div class="img-footer">
-				<a href="https://facebook.com" target="_blank">
-					<img class="redesSociales" src="./img/facebook.png" alt="seguinos en facebook">
-				</a>
-					<a href="https://instagram.com" target="_blank">
-					<img src="./img/instagram.png" alt="seguinos en instagram">
-				</a>
-					<a href="https://twitter.com" target="_blank">
-					<img class="redesSociales" src="./img/twitter.png" alt="seguinos en twitter">
-				</a>
-			</div>
-			
-			<div>
-				<p>Derechos reservados Alpha - RentMotors © 2022</p>
-			</div>
-		</div>
-	</footer>
-	<script src="./js/bootstrap.min.js"></script>
+		</footer>
+		<script src="./js/bootstrap.min.js"></script>
+	</div>
 </body>
 </html>
