--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -13,120 +13,133 @@
 <!--Mi CSS-->
 <link rel="stylesheet" href="../css/main.css">
 <body>
-
-	<!--Inicia NAV-->
-	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
-  	<div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
-    </a>
-    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link active" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
-        </li>
-         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/nosotros.html">NOSOTROS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-	<!--Finaliza nav-->
-
-	<!--Inicia header-->
-	<header class="header__image">
-		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
-
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Todos los vehículos cuentan con seguro al día">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Botón de emergencia">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Servicio se rastreo satelital">
-			    </div>
-
-			  </div>
-
-			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Previous</span>
-			  </button>
-
-			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Next</span>
-			  </button>
+	<div id="grid">
+		<!--Inicia NAV-->
+		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html">
+			<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+		</a>
+		<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link active" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+			</li>
+		</ul>
 		</div>
-		<!--Finaliza Carousel-->
-	</header>
-	<!--Fin header-->
-	<main>
-		<h1>Contamos con póliza de seguro + rastreo satelital + botón de emergencia</h1>
-		<section class="coberturas">
-			<div class="fondo__cobertura">
-				<div class="coberturas__moto">
-					<p class="coberturaTitulos">MOTO:</p>
-					<p>Seguro de responsabilidad civil. No cubre daños materiales. Todas las motos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
-				</div>
-				
-				<div class="coberturas__auto">
-					<p class="coberturaTitulos">AUTO:</p>
-					<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
+	</div>
+	</nav>
+		<!--Finaliza nav-->
+
+		<!--Inicia header-->
+		<header class="header__image">
+			<!--Inicia Carousel-->
+			<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
+
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 				</div>
 
-				<div class="coberturas__camioneta">
-					<p class="coberturaTitulos">CAMIONETA:</p>
-					<p>Seguro contra todo riesgo con franquicia hasta $30.000. Todas las camionetas cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					<img src="../img/header.jpg" class="d-block w-100" alt="Todos los vehículos cuentan con seguro al día">
+					</div>
+
+					<div class="carousel-item">
+					<img src="../img/header2.jpg" class="d-block w-100" alt="Botón de emergencia">
+					</div>
+
+					<div class="carousel-item">
+					<img src="../img/header3.jpg" class="d-block w-100" alt="Servicio se rastreo satelital">
+					</div>
+
+				</div>
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
+			</div>
+			<!--Finaliza Carousel-->
+		</header>
+		<!--Fin header-->
+		<main>
+			<h1>Contamos con póliza de seguro + rastreo satelital + botón de emergencia</h1>
+			<section class="coberturas">
+				<div class="fondo__cobertura">
+					<div class="coberturas__moto">
+						<div class="moto__titulo">
+							<p class="coberturaTitulos">MOTO:</p>
+						</div>
+						<div>
+							<p>Seguro de responsabilidad civil. No cubre daños materiales. Todas las motos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
+						</div>
+					</div>
+					
+					<div class="coberturas__auto">
+						<div class="moto__titulo">
+							<p class="coberturaTitulos">AUTO:</p>
+						</div>
+						<div>
+							<p>Seguro contra terceros completo. No cubre rotura de cristales, robo de neumáticos o robo de estéreo. Todos los autos cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
+						</div>
+					</div>
+
+					<div class="coberturas__camioneta">
+						<div class="moto__titulo">
+							<p class="coberturaTitulos">CAMIONETA:</p>
+						</div>
+						<div>
+							<p>Seguro contra todo riesgo con franquicia hasta $30.000. Todas las camionetas cuentan con un botón de emergencia, en caso de precisar acarreo y no tener forma de comunicarse via telefónica.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+		<footer>
+			<div class="pie__footer">
+				<div>
+					<p>Seguinos en nuestras redes sociales:</p>
+				</div>
+				<div class="img-footer">
+					<a href="https://facebook.com" target="_blank">
+						<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
+					</a>
+						<a href="https://instagram.com" target="_blank">
+						<img src="../img/instagram.png" alt="seguinos en instagram">
+					</a>
+						<a href="https://twitter.com" target="_blank">
+						<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
+					</a>
+				</div>
+				<div>
+					<p>Derechos reservados Alpha - RentMotors © 2022</p>
 				</div>
 			</div>
-		</section>
-	</main>
-	<footer>
-		<div class="pie__footer">
-			<div>
-				<p>Seguinos en nuestras redes sociales:</p>
-			</div>
-			<div class="img-footer">
-				<a href="https://facebook.com" target="_blank">
-					<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
-				</a>
-					<a href="https://instagram.com" target="_blank">
-					<img src="../img/instagram.png" alt="seguinos en instagram">
-				</a>
-					<a href="https://twitter.com" target="_blank">
-					<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
-				</a>
-			</div>
-			<div>
-				<p>Derechos reservados Alpha - RentMotors © 2022</p>
-			</div>
-		</div>
-	</footer>
+		</footer>
+	</div>
 	<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
