--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -14,175 +14,176 @@
 <!--Mi CSS-->
 <link rel="stylesheet" href="../css/main.css">
 <body>
-
-	<!--Inicia NAV-->
-	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
-  	<div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
-    </a>
-    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
-        </li>
-         <li class="nav-item">
-          <a class="animacion__navbar nav-link active" href="../pages/nosotros.html">NOSOTROS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-	<!--Finaliza nav-->
-
-	<!--Inicia header-->
-	<header class="header__image">
-		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
-
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Somos una empresa familiar de mas de 30 años en el rubro">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Ofrecemos seguridad y confianza">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Si no podes pasar a retirarlo por la empresa, te lo llevamos a tu casa">
-			    </div>
-
-			  </div>
-
-			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Previous</span>
-			  </button>
-
-			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Next</span>
-			  </button>
+	<div id="grid">
+		<!--Inicia NAV-->
+		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html">
+			<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+		</a>
+		<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/precios.html">PRECIOS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link active" href="../pages/nosotros.html">NOSOTROS</a>
+			</li>
+		</ul>
 		</div>
-		<!--Finaliza Carousel-->
-	</header>
-	<!--Fin header-->
+	</div>
+	</nav>
 
-	<main class="nosotros__vacio">
-		<h1>Sobre nosotros</h1>
-		<p>Somos una empresa conformada por 16 empleados, para garantizar la mejor calidad para nuestros vehiculos. Contamos con sector de mecánica,
-			donde revisamos el funcionamiento de nuestra flota, contamos con lavadero, para asegurarnos que recibas tu vehículo en perfectas condiciones,
-			también te entregamos el vehículo con tanque lleno y una grilla con los detalles que pueda tener el vehículo, para garantizar tu tranqulidad.
-			Tu auto, moto o camioneta la podes retitar por la sucursal o podes elegir que te la llevemos a tu casa o trabajo sin cargo.
-		</p>
+		<!--Finaliza nav-->
 
-		<!--inicia acordeon-->
+		<!--Inicia header-->
+		<header class="header__image">
+			<!--Inicia Carousel-->
+			<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
 
-		<div class="accordion" id="accordionPanelsStayOpenExample">
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
-			      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-			        <p>FAQ</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-			      <div class="accordion-body">
-			      <p><code>¿ME COBRAN EL LAVADO? <br> El vehículo deber ser devuelto en las consiciones que se entregó, en caso de que detectemos
-					restos de pelo de animal, tierra, cenizas de cigarrillo, basura, etc el lavado queda a cargo del cliente.</code></p>		      
-				  <p><code> <br> ¿Tienen sillas para bebés? <br> Si, las sillas para bebés se solicitan al momento del alquler del vehículo y van sin cargo. </code></p>		      
-				  <p><code> <br> ¿Me cobran las multas? <br> Si, todas las infracciones van a cargo del cliente. </code></p>
-			    </div>
-			  </div>
-			</div>
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
-			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-			        <p>NUESTRA HISTORIA</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			      <div class="accordion-body">
-			        <p><code>Somos una empresa familiar fundada en 1986, comenzamos con 3 autos los cuales eran los autos de la familia, 
-						a medida que fuimos ganando confianza y reputación, pudimos ampliar nuestra flota, actualmente contamos con 3 sucursales y una flota que supera los 200 vehículos.</code></p>
-			      </div>
-			    </div>
-			  </div>
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
-			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-			        <p>NUESTRO OBJETIVO</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-			      <div class="accordion-body">
-			      	<p><code>Nuestro objetivo es dar el mejor servicio a nuestros clientes y fomentar la responsabilidad y el compromiso. Nuestro proyecto es ampliar nuestras sucursales hacia el
-						interior del país, para eso, trabajamos día a día con la exigencia que nuestras ambiciones demandan
-						para que nos vuelvas a elegir.
-					</code></p>
-			      </div>
-			    </div>
-			  </div>
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingFour">
-			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-			        <p>SUCURSALES</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
-			      <div class="accordion-body">
-			      	<p><code>Podes encontrarnos en: </code></p>
-					<p><code>AV. Rivadavia y 9 de Julio (CABA)</code></p>
-					<p><code>Av. Crovara y Av. San martín (Villa Madero)</code></p>
-					<p><code>Av. Hipólito Yrigoyen 1600 (Morón)</code></p>
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 				</div>
-			    </div>
-			  </div>
-		</div>
 
-<!--finaliza acordeon-->
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					<img src="../img/header.jpg" class="d-block w-100" alt="Somos una empresa familiar de mas de 30 años en el rubro">
+					</div>
 
-	</main>
-	<footer>
-		<div class="pie__footer">
-			<div>
-				<p>Seguinos en nuestras redes sociales:</p>
+					<div class="carousel-item">
+					<img src="../img/header2.jpg" class="d-block w-100" alt="Ofrecemos seguridad y confianza">
+					</div>
+
+					<div class="carousel-item">
+					<img src="../img/header3.jpg" class="d-block w-100" alt="Si no podes pasar a retirarlo por la empresa, te lo llevamos a tu casa">
+					</div>
+
+				</div>
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<div class="img-footer">
-				<a href="https://facebook.com" target="_blank">
-					<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
-				</a>
-					<a href="https://instagram.com" target="_blank">
-					<img src="../img/instagram.png" alt="seguinos en instagram">
-				</a>
-					<a href="https://twitter.com" target="_blank">
-					<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
-				</a>
+			<!--Finaliza Carousel-->
+		</header>
+		<!--Fin header-->
+
+		<main class="nosotros__vacio">
+			<h1>Sobre nosotros</h1>
+			<p>Somos una empresa conformada por 16 empleados, para garantizar la mejor calidad para nuestros vehiculos. Contamos con sector de mecánica,
+				donde revisamos el funcionamiento de nuestra flota, contamos con lavadero, para asegurarnos que recibas tu vehículo en perfectas condiciones,
+				también te entregamos el vehículo con tanque lleno y una grilla con los detalles que pueda tener el vehículo, para garantizar tu tranqulidad.
+				Tu auto, moto o camioneta la podes retitar por la sucursal o podes elegir que te la llevemos a tu casa o trabajo sin cargo.
+			</p>
+
+			<!--inicia acordeon-->
+
+			<div class="accordion" id="accordionPanelsStayOpenExample">
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
+					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+						<p>FAQ</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+					<div class="accordion-body">
+					<p><code>¿ME COBRAN EL LAVADO? <br> El vehículo deber ser devuelto en las consiciones que se entregó, en caso de que detectemos
+						restos de pelo de animal, tierra, cenizas de cigarrillo, basura, etc el lavado queda a cargo del cliente.</code></p>		      
+					<p><code> <br> ¿Tienen sillas para bebés? <br> Si, las sillas para bebés se solicitan al momento del alquler del vehículo y van sin cargo. </code></p>		      
+					<p><code> <br> ¿Me cobran las multas? <br> Si, todas las infracciones van a cargo del cliente. </code></p>
+					</div>
+				</div>
+				</div>
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+						<p>NUESTRA HISTORIA</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+					<div class="accordion-body">
+						<p><code>Somos una empresa familiar fundada en 1986, comenzamos con 3 autos los cuales eran los autos de la familia, 
+							a medida que fuimos ganando confianza y reputación, pudimos ampliar nuestra flota, actualmente contamos con 3 sucursales y una flota que supera los 200 vehículos.</code></p>
+					</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+						<p>NUESTRO OBJETIVO</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+					<div class="accordion-body">
+						<p><code>Nuestro objetivo es dar el mejor servicio a nuestros clientes y fomentar la responsabilidad y el compromiso. Nuestro proyecto es ampliar nuestras sucursales hacia el
+							interior del país, para eso, trabajamos día a día con la exigencia que nuestras ambiciones demandan
+							para que nos vuelvas a elegir.
+						</code></p>
+					</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingFour">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+						<p>SUCURSALES</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+					<div class="accordion-body">
+						<p><code>Podes encontrarnos en: </code></p>
+						<p><code>AV. Rivadavia y 9 de Julio (CABA)</code></p>
+						<p><code>Av. Crovara y Av. San martín (Villa Madero)</code></p>
+						<p><code>Av. Hipólito Yrigoyen 1600 (Morón)</code></p>
+					</div>
+					</div>
+				</div>
 			</div>
-			<div>
-				<p>Derechos reservados Alpha - RentMotors © 2022</p>
+
+	<!--finaliza acordeon-->
+
+		</main>
+		<footer>
+			<div class="pie__footer">
+				<div>
+					<p>Seguinos en nuestras redes sociales:</p>
+				</div>
+				<div class="img-footer">
+					<a href="https://facebook.com" target="_blank">
+						<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
+					</a>
+						<a href="https://instagram.com" target="_blank">
+						<img src="../img/instagram.png" alt="seguinos en instagram">
+					</a>
+						<a href="https://twitter.com" target="_blank">
+						<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
+					</a>
+				</div>
+				<div>
+					<p>Derechos reservados Alpha - RentMotors © 2022</p>
+				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
+	</div>
 	<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
