--- a/pages/precios.html
+++ b/pages/precios.html
@@ -15,191 +15,192 @@
 <!--Mi CSS-->
 <link rel="stylesheet" href="../css/main.css">
 <body>
-
-	<!--Inicia NAV-->
-	<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
-  	<div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">
-    	<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
-    </a>
-    <button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      	<li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
-        </li>
-        <li class="nav-item">
-          <a class="animacion__navbar nav-link active" href="../pages/precios.html">PRECIOS</a>
-        </li>
-         <li class="nav-item">
-          <a class="animacion__navbar nav-link" href="../pages/nosotros.html">NOSOTROS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-	<!--Finaliza nav-->
-
-	<!--Inicia header-->
-	<header class="header__image">
-		<!--Inicia Carousel-->
-		<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
-
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-
-			  <div class="carousel-inner">
-			    <div class="carousel-item active">
-			      <img src="../img/header.jpg" class="d-block w-100" alt="Precios accesibles">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header2.jpg" class="d-block w-100" alt="Unidades confiables">
-			    </div>
-
-			    <div class="carousel-item">
-			      <img src="../img/header3.jpg" class="d-block w-100" alt="Aceptamos efectivo, mastercard, visa, y mercado pago, débito y crédito">
-			    </div>
-
-			  </div>
-
-			  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Previous</span>
-			  </button>
-
-			  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			    <span class="visually-hidden">Next</span>
-			  </button>
+	<div id="grid">
+		<!--Inicia NAV-->
+		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html">
+			<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+		</a>
+		<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" aria-current="page" href="../index.html">FORMULARIO</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" aria-current="page" href="../pages/coberturas.html">COBERTURAS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/flota.html">FLOTA</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link active" href="../pages/precios.html">PRECIOS</a>
+			</li>
+			<li class="nav-item">
+			<a class="animacion__navbar nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+			</li>
+		</ul>
 		</div>
-		<!--Finaliza Carousel-->
-	</header>
-	<!--Fin header-->
+	</div>
+	</nav>
 
-	<main id="altura__precios">
-		<h1>Tarifa por día, según tu unidad</h1>
-		<div class="tabla__ubicacion">
-			<table class="tabla__precios" border="5px" cellpadding="10px" cellspacing="2px">
-				<tr>
-					<th>Vehículo</th>
-					<th>Período</th>
-					<th>Precio</th>
-				</tr>
-				<tr>
-					<td>Auto</td>
-					<td class="diaPrecio">Dia</td>
-					<td>$2500</td>
-				</tr>
-				<tr>
-					<td>Moto</td>
-					<td class="diaPrecio">Día</td>
-					<td>$1200</td>
-				</tr>
-				<tr>
-					<td>Camioneta</td>
-					<td class="diaPrecio">Día</td>
-					<td>$4000</td>
-				</tr>
-			</table>
+		<!--Finaliza nav-->
 
-			<div class="interesTarjetas">
-				<P>CON LA COMPRA MEDIANTE CUALQUIER TARJETA DE CRÉDITO:</P>
-				<p>**HASTA 3 CUOTAS SIN INTERÉS**</p>
-				<P>**6 CUOTAS 10% DE INTERÉS**</P>
-				<P>**12 O MAS CUOTAS 20% DE INTERÉS**</P>
-				<p>Telefonos: 4454-6213 / 11-1234-5678 - Av. Rivadavia 50 casi 9 de julio</p>
+		<!--Inicia header-->
+		<header class="header__image">
+			<!--Inicia Carousel-->
+			<div id="carouselExampleIndicators" class="carousel slide col-lg-10 headerImage" data-bs-ride="carousel">
+
+				<div class="carousel-indicators">
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				</div>
+
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+					<img src="../img/header.jpg" class="d-block w-100" alt="Precios accesibles">
+					</div>
+
+					<div class="carousel-item">
+					<img src="../img/header2.jpg" class="d-block w-100" alt="Unidades confiables">
+					</div>
+
+					<div class="carousel-item">
+					<img src="../img/header3.jpg" class="d-block w-100" alt="Aceptamos efectivo, mastercard, visa, y mercado pago, débito y crédito">
+					</div>
+
+				</div>
+
+				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+
+				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-		</div>
+			<!--Finaliza Carousel-->
+		</header>
+		<!--Fin header-->
 
-		<!--inicia acordeon-->
+		<main id="altura__precios">
+			<h1>Tarifa por día, según tu unidad</h1>
+			<div class="tabla__ubicacion">
+				<table class="tabla__precios" border="5px" cellpadding="10px" cellspacing="2px">
+					<tr>
+						<th>Vehículo</th>
+						<th>Período</th>
+						<th>Precio</th>
+					</tr>
+					<tr>
+						<td>Auto</td>
+						<td class="diaPrecio">Dia</td>
+						<td>$2500</td>
+					</tr>
+					<tr>
+						<td>Moto</td>
+						<td class="diaPrecio">Día</td>
+						<td>$1200</td>
+					</tr>
+					<tr>
+						<td>Camioneta</td>
+						<td class="diaPrecio">Día</td>
+						<td>$4000</td>
+					</tr>
+				</table>
 
-		<div class="accordion" id="accordionPanelsStayOpenExample">
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
-			      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-			        <p>MEDIOS DE PAGO</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
-			      <div class="accordion-body">
-			      <p><code> Aceptamos efectivo (Pesos argentinos, dólares -valor oficial-, euros -valor oficial-), Tarjeta de crédito o débito visa mastercard, Mercado pago </code></p>		      
-			      <div class="logos__pagos"> 
-			     		<img src="../img/precios/efectivo.png" alt="Podes pagar en efectivo, pesos argentinos, o moneda extranjera"> 
-				      <img src="../img/precios/mastercard.svg" alt="Podes pagar con mastercard">
-				      <img src="../img/precios/visa.svg" alt="Podes pagar con visa">
-				      <img src="../img/precios/mercadopago.svg" alt="Aceptamos mercado pago">
-			      </div>
-			      </div>
-			    </div>
-			  </div>
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
-			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-			        <p>¿PUEDO IR A OTRO PAÍS CON UN VEHÍCULO ALQUILADO?</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-			      <div class="accordion-body">
-			        <p><code>Si, siempre y cuando se haya aclarado al momento de alquilar el vehículo. La empresa no se hace responsable
-						si ocurre un siniestro fuera de los límites del país sin haber sido informado en su debido momento.
-					</code></p>
-			      </div>
-			    </div>
-			  </div>
-			  <div class="accordion-item">
-			    <h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
-			      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-			        <p>¿QUE PASA SI TE ROBAN O CHOCAN EL VEHÍCULO?</p>
-			      </button>
-			    </h3>
-			    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-			      <div class="accordion-body">
-			      	<p><code>En caso de robo, dar aviso a la empresa de inmediato, ya que nuestros vehículos cuentan con rastreo satelital,
-						contamos con un convenio con una empresa de seguridad la cuál se encargará de rastrear el vehículo denunciado.
-						En caso de siniestro, la empresa cubre todos los gastos materiales tanto del vehículo de nuestro cliente
-						como de terceros. ALPHA-RentMotors no toma responsabilidad en acciones jurídicas civiles.
-					</code></p>
-			      </div>
-			    </div>
-			  </div>
-		</div>
+				<div class="interesTarjetas">
+					<P>CON LA COMPRA MEDIANTE CUALQUIER TARJETA DE CRÉDITO:</P>
+					<p>**HASTA 3 CUOTAS SIN INTERÉS**</p>
+					<P>**6 CUOTAS 10% DE INTERÉS**</P>
+					<P>**12 O MAS CUOTAS 20% DE INTERÉS**</P>
+					<p>Telefonos: 4454-6213 / 11-1234-5678 - Av. Rivadavia 50 casi 9 de julio</p>
+				</div>
+			</div>
 
-<!--finaliza acordeon-->
-	</main>
-	<footer>
-		<div class="pie__footer">
-			<div>
-				<p>Seguinos en nuestras redes sociales:</p>
+			<!--inicia acordeon-->
+
+			<div class="accordion" id="accordionPanelsStayOpenExample">
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingOne">
+					<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+						<p>MEDIOS DE PAGO</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+					<div class="accordion-body">
+					<p><code> Aceptamos efectivo (Pesos argentinos, dólares -valor oficial-, euros -valor oficial-), Tarjeta de crédito o débito visa mastercard, Mercado pago </code></p>		      
+					<div class="logos__pagos"> 
+						<img src="../img/precios/efectivo.png" alt="Podes pagar en efectivo, pesos argentinos, o moneda extranjera"> 
+						<img src="../img/precios/mastercard.svg" alt="Podes pagar con mastercard">
+						<img src="../img/precios/visa.svg" alt="Podes pagar con visa">
+						<img src="../img/precios/mercadopago.svg" alt="Aceptamos mercado pago">
+					</div>
+					</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingTwo">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+						<p>¿PUEDO IR A OTRO PAÍS CON UN VEHÍCULO ALQUILADO?</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+					<div class="accordion-body">
+						<p><code>Si, siempre y cuando se haya aclarado al momento de alquilar el vehículo. La empresa no se hace responsable
+							si ocurre un siniestro fuera de los límites del país sin haber sido informado en su debido momento.
+						</code></p>
+					</div>
+					</div>
+				</div>
+				<div class="accordion-item">
+					<h3 class="fuente__acordeon accordion-header" id="panelsStayOpen-headingThree">
+					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+						<p>¿QUE PASA SI TE ROBAN O CHOCAN EL VEHÍCULO?</p>
+					</button>
+					</h3>
+					<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+					<div class="accordion-body">
+						<p><code>En caso de robo, dar aviso a la empresa de inmediato, ya que nuestros vehículos cuentan con rastreo satelital,
+							contamos con un convenio con una empresa de seguridad la cuál se encargará de rastrear el vehículo denunciado.
+							En caso de siniestro, la empresa cubre todos los gastos materiales tanto del vehículo de nuestro cliente
+							como de terceros. ALPHA-RentMotors no toma responsabilidad en acciones jurídicas civiles.
+						</code></p>
+					</div>
+					</div>
+				</div>
 			</div>
-			<div class="img-footer">
-				<a href="https://facebook.com" target="_blank">
-					<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
-				</a>
-					<a href="https://instagram.com" target="_blank">
-					<img src="../img/instagram.png" alt="seguinos en instagram">
-				</a>
-					<a href="https://twitter.com" target="_blank">
-					<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
-				</a>
+
+	<!--finaliza acordeon-->
+		</main>
+		<footer>
+			<div class="pie__footer">
+				<div>
+					<p>Seguinos en nuestras redes sociales:</p>
+				</div>
+				<div class="img-footer">
+					<a href="https://facebook.com" target="_blank">
+						<img class="redesSociales" src="../img/facebook.png" alt="seguinos en facebook">
+					</a>
+						<a href="https://instagram.com" target="_blank">
+						<img src="../img/instagram.png" alt="seguinos en instagram">
+					</a>
+						<a href="https://twitter.com" target="_blank">
+						<img class="redesSociales" src="../img/twitter.png" alt="seguinos en twitter">
+					</a>
+				</div>
+				<div>
+					<p>Derechos reservados Alpha - RentMotors © 2022</p>
+				</div>
 			</div>
-			<div>
-				<p>Derechos reservados Alpha - RentMotors © 2022</p>
-			</div>
-		</div>
-	</footer>
+		</footer>
+	</div>
 	<script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
