--- a/pages/flota.html
+++ b/pages/flota.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nuestra Flota</title>
+	<title>Flota</title>
 	<meta name="description" content="Amplia variedad de marcas y modelos, mantenimiento al día.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 </head>
