--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -52,7 +52,7 @@
                         <label for="numero_tarjeta">&nbsp;Número de Tarjeta:</label>
                         <input type="number" id="numero__tarjeta" placeholder="xxxx-xxxx-xxxx-xxxx">
                         <label for="venc__tarjeta">&nbsp;Fecha de vencimiento de la tarjeta:</label>
-                        <input type="number" id="venc__tarjeta" placeholder="mm/aa">
+                        <input type="number" id="venc__tarjeta" placeholder="mm.aa">
                         <label for="cod__tarjeta">&nbsp;Código de seguridad:</label>
                         <input type="number" id="cod__tarjeta" placeholder="xxx">
                         <label for="direccion">&nbsp;Dirección:</label>
