--- a/pages/error404.html
+++ b/pages/error404.html
@@ -54,15 +54,15 @@
     <main class="errorMain">
       <section>
         <div>
-          <img class="errorImagen" src="../img/error404.png" alt="mensaje de error, pagina no encontrada, regresar al menu anteior">
+          <img class="errorImagen" src="../img/error404.jpg" alt="mensaje de error, pagina no encontrada, regresar al menu anteior">
         </div>
     </section>
     </main>
 
     <!--inicio footer-->
 
-    <footer id="footer__large" class="footer__error">
-      <div class="pie__footer div__error">
+    <footer class="footer__error">
+      <div class="pie__footer">
         <div>
           <p>Seguinos en nuestras redes sociales:</p>
         </div>
