--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Alquiler de autos, camionetas y motos, mantenimiento y service al día, 
 	unidades nuevas, amplia variedad de marcas y modelos. confort y calidad, al mejor precio.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<meta name="author" content="Rodrigo Hernán Blanco">
 	<title>RentMotors empresa rentadora de vehículos en CABA</title>
 </head>
 
