--- a/pages/flota.html
+++ b/pages/flota.html
@@ -6,6 +6,7 @@
 	<title>Flota</title>
 	<meta name="description" content="Amplia variedad de marcas y modelos, mantenimiento al día.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
