--- a/pages/precios.html
+++ b/pages/precios.html
@@ -8,6 +8,7 @@
 	pesos argentinos o moneda extranjera. Si abonás con tarjeta, aceptamos mastercard y visa hasta 3 cuotas sin interés, 6 cuotas 10% 
 	de interés y 12 o mas cuotas 20% de interés. También aceptamos mercado pago">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
