--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva</title>
+    <title>Reservas</title>
+    <meta name="description" content="Completá los datos del formulario, y reservá tu unidad en el momento">
+	<meta name="keywords" content="reservas">
+    <meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
