--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -6,6 +6,7 @@
 	<title>Coberturas</title>
 	<meta name="description" content="Contamos con convenio de seguros, con rastreo satelital, y botón de emergencia en caso de necesitar auxilio y no poder comunicarte.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
