--- a/pages/error404.html
+++ b/pages/error404.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
-    <meta name="description" content="Amplia variedad de marcas y modelos, mantenimiento al día.">
-	  <meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+    <meta name="description" content="La página que busca no está disponible, siga revisando nuestros vehículos">
+    <meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
