--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="Somos una empresa familiar, instalada en el rubro desde hace mas de 30 años,
 	reconocidos por nuestra confiabilidad y seguridad.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
+	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
 <link rel="shortcut icon" href="../img/favicon.jfif">
 <!--BS CSS-->
