icono, img webp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<title>RentMotors empresa rentadora de vehículos en CABA</title>
 </head>
 
-<link rel="shortcut icon" href="./img/favicon.jfif">
+<link rel="shortcut icon" href="./img/favicon.png">
 <!--BS CSS-->
 <link rel="stylesheet" href="./css/bootstrap.min.css">
 <!--Mi CSS-->
