--- a/pages/error404.html
+++ b/pages/error404.html
@@ -54,7 +54,7 @@
     <main class="errorMain">
       <section>
         <div>
-          <img class="errorImagen" src="../img/error404.jpg" alt="mensaje de error, pagina no encontrada, regresar al menu anteior">
+          <img class="errorImagen" src="../img/error404.webp" alt="mensaje de error, pagina no encontrada, regresar al menu anteior">
         </div>
     </section>
     </main>
