--- a/pages/error404.html
+++ b/pages/error404.html
@@ -8,7 +8,7 @@
     <meta name="description" content="La página que busca no está disponible, siga revisando nuestros vehículos">
     <meta name="author" content="Rodrigo Hernán Blanco">
 </head>
-<link rel="shortcut icon" href="../img/favicon.jfif">
+<link rel="shortcut icon" href="../img/favicon.png">
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
