--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ALPHA-Nosotros</title>
+	<title>Nosotros</title>
 	<meta name="description" content="Somos una empresa familiar, instalada en el rubro desde hace mas de 30 años,
 	reconocidos por nuestra confiabilidad y seguridad.">
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
-<link rel="shortcut icon" href="../img/favicon.jfif">
+<link rel="shortcut icon" href="../img/favicon.png">
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
