--- a/pages/precios.html
+++ b/pages/precios.html
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="alquiler, auto, moto, camioneta, caba">
 	<meta name="author" content="Rodrigo Hernán Blanco">
 </head>
-<link rel="shortcut icon" href="../img/favicon.jfif">
+<link rel="shortcut icon" href="../img/favicon.png">
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
