--- a/pages/reserva.html
+++ b/pages/reserva.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="reservas">
     <meta name="author" content="Rodrigo Hernán Blanco">
 </head>
-<link rel="shortcut icon" href="../img/favicon.jfif">
+<link rel="shortcut icon" href="../img/favicon.png">
 <!--BS CSS-->
 <link rel="stylesheet" href="../css/bootstrap.min.css">
 <!--Mi CSS-->
