--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="../index.html">
-					<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+					<img id="indice__logo" src="../img/logo.webp" alt="logo de Alpha, acceso al inicio">
 				</a>
 				<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -62,15 +62,15 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="../img/header.jpg" class="d-block w-100" alt="Somos una empresa familiar de mas de 30 años en el rubro">
+						<img src="../img/header.webp" class="d-block w-100" alt="Somos una empresa familiar de mas de 30 años en el rubro">
 					</div>
 
 					<div class="carousel-item">
-						<img src="../img/header2.jpg" class="d-block w-100" alt="Ofrecemos seguridad y confianza">
+						<img src="../img/header2.webp" class="d-block w-100" alt="Ofrecemos seguridad y confianza">
 					</div>
 
 					<div class="carousel-item">
-						<img src="../img/header3.jpg" class="d-block w-100" alt="Si no podes pasar a retirarlo por la empresa, te lo llevamos a tu casa">
+						<img src="../img/header3.webp" class="d-block w-100" alt="Si no podes pasar a retirarlo por la empresa, te lo llevamos a tu casa">
 					</div>
 
 				</div>
