--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="./index.html">
-					<img id="indice__logo" src="./img/logo.png" alt="logo de Alpha, acceso al inicio">
+					<img id="indice__logo" src="./img/logo.webp" alt="logo de Alpha, acceso al inicio">
 				</a>
 			<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -63,15 +63,15 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-					<img src="./img/header.jpg" class="d-block w-100" alt="Contamos con una flota de mas de 200 vehÍculos">
+					<img src="./img/header.webp" class="d-block w-100" alt="Contamos con una flota de mas de 200 vehÍculos">
 					</div>
 
 					<div class="carousel-item">
-					<img src="./img/header2.jpg" class="d-block w-100" alt="Amplia variedad de marcas y modelos">
+					<img src="./img/header2.webp" class="d-block w-100" alt="Amplia variedad de marcas y modelos">
 					</div>
 
 					<div class="carousel-item">
-					<img src="./img/header3.jpg" class="d-block w-100" alt="reservá tu vehículo en 3 pasos">
+					<img src="./img/header3.webp" class="d-block w-100" alt="reservá tu vehículo en 3 pasos">
 					</div>
 
 				</div>
