--- a/pages/coberturas.html
+++ b/pages/coberturas.html
@@ -19,7 +19,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="../index.html">
-					<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+					<img id="indice__logo" src="../img/logo.webp" alt="logo de Alpha, acceso al inicio">
 				</a>
 				<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -60,15 +60,15 @@
 
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-					<img src="../img/header.jpg" class="d-block w-100" alt="Todos los vehículos cuentan con seguro al día">
+					<img src="../img/header.webp" class="d-block w-100" alt="Todos los vehículos cuentan con seguro al día">
 					</div>
 
 					<div class="carousel-item">
-					<img src="../img/header2.jpg" class="d-block w-100" alt="Botón de emergencia">
+					<img src="../img/header2.webp" class="d-block w-100" alt="Botón de emergencia">
 					</div>
 
 					<div class="carousel-item">
-					<img src="../img/header3.jpg" class="d-block w-100" alt="Servicio se rastreo satelital">
+					<img src="../img/header3.webp" class="d-block w-100" alt="Servicio se rastreo satelital">
 					</div>
 
 				</div>
