--- a/pages/flota.html
+++ b/pages/flota.html
@@ -20,7 +20,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-lightblue">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="../index.html">
-					<img id="indice__logo" src="../img/logo.png" alt="logo de Alpha, acceso al inicio">
+					<img id="indice__logo" src="../img/logo.webp" alt="logo de Alpha, acceso al inicio">
 				</a>
 				<button class="navbar-toggler btn__color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -61,15 +61,15 @@
 
 				<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="../img/header.jpg" class="d-block w-100" alt="Autos 100% verificados por nosotros">
+							<img src="../img/header.webp" class="d-block w-100" alt="Autos 100% verificados por nosotros">
 						</div>
 
 						<div class="carousel-item">
-							<img src="../img/header2.jpg" class="d-block w-100" alt="Todas las marcas y modelos">
+							<img src="../img/header2.webp" class="d-block w-100" alt="Todas las marcas y modelos">
 						</div>
 
 						<div class="carousel-item">
-						<img src="../img/header3.jpg" class="d-block w-100" alt="Lo podes retirar por la empresa o podes pedir
+						<img src="../img/header3.webp" class="d-block w-100" alt="Lo podes retirar por la empresa o podes pedir
 						que te lo llevemos a tu casa.">
 						</div>
 
@@ -94,7 +94,7 @@
 				<div class="grid__autos">
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card auto1 imagen__flota">
-							<img src="../img/auto1.jpg" class="card-img-top" alt="Renault Logan sedan 4 puertas color gris plata, caja manual, levantavidrios y espejos eléctricos">
+							<img src="../img/auto1.webp" class="card-img-top" alt="Renault Logan sedan 4 puertas color gris plata, caja manual, levantavidrios y espejos eléctricos">
 								<div class="card-body">
 									<p class="card-text auto__pie"><code>Renault Logan</code></p>
 								</div>
@@ -103,7 +103,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card auto2 imagen__flota">
-							<img src="../img/auto2.png" class="card-img-top" alt="Volkswagen gol 5 puertas gris oscuro, caja manual, levantavidrios y retrovisores manuales">
+							<img src="../img/auto2.webp" class="card-img-top" alt="Volkswagen gol 5 puertas gris oscuro, caja manual, levantavidrios y retrovisores manuales">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>VolksWagen Gol</code></p>
 							</div>
@@ -112,7 +112,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card auto3 imagen__flota">
-							<img src="../img/auto3.png" class="card-img-top" alt="Nissan sentra, color rojo, sedan 4 puertas, caja automática, llave de presencia, botón de arranque, y sensor de estacionamiento">
+							<img src="../img/auto3.webp" class="card-img-top" alt="Nissan sentra, color rojo, sedan 4 puertas, caja automática, llave de presencia, botón de arranque, y sensor de estacionamiento">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Nissan Sentra</code></p>
 							</div>
@@ -121,7 +121,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card cam1 imagen__flota">
-							<img src="../img/camioneta1.png" class="card-img-top" alt="Toyota Hilux, color roja, todoterreno, 4 puertas con caja descubierta, caja manual, 6 velocidades">
+							<img src="../img/camioneta1.webp" class="card-img-top" alt="Toyota Hilux, color roja, todoterreno, 4 puertas con caja descubierta, caja manual, 6 velocidades">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Toyota Hilux</code></p>
 							</div>
@@ -130,7 +130,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card cam2 imagen__flota">
-							<img src="../img/camioneta2.png" class="card-img-top" alt="Chevrolet tracker, color gris plata, caja automática, camara trasera para estacionar, ideal para familia
+							<img src="../img/camioneta2.webp" class="card-img-top" alt="Chevrolet tracker, color gris plata, caja automática, camara trasera para estacionar, ideal para familia
 							levantavidrios eléctrico, pantalla táctil">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Chevrolet Tracker</code></p>
@@ -140,7 +140,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card cam3 imagen__flota">
-							<img src="../img/camioneta3.png" class="card-img-top" alt="Nissan H1, color gris plata, para 9 personas, ejecutiva, los asientos se pueden enfrentar, 
+							<img src="../img/camioneta3.webp" class="card-img-top" alt="Nissan H1, color gris plata, para 9 personas, ejecutiva, los asientos se pueden enfrentar, 
 							caja automática, cédula de uso privado, amplio espacio y muy cómoda">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Nissan H1</code></p>
@@ -150,7 +150,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card moto1 imagen__flota">
-							<img src="../img/moto1.jpg" class="card-img-top" alt="Moto Zanella, 150cc Monocilíndrico, 4 tiempos, 2 válvulas, OHV, refrigerado por aire">
+							<img src="../img/moto1.webp" class="card-img-top" alt="Moto Zanella, 150cc Monocilíndrico, 4 tiempos, 2 válvulas, OHV, refrigerado por aire">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Zanella</code></p>
 							</div>
@@ -159,7 +159,7 @@
 
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card moto2 imagen__flota">
-							<img src="../img/moto2.png" class="card-img-top" alt="Moto Honda, color roja y negra, 600cc Cuatro cilindros en línea, 4 tiempos, 16 válvulas, DOHC, refrigerado por líquido">
+							<img src="../img/moto2.webp" class="card-img-top" alt="Moto Honda, color roja y negra, 600cc Cuatro cilindros en línea, 4 tiempos, 16 válvulas, DOHC, refrigerado por líquido">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Honda</code></p>
 							</div>
@@ -168,7 +168,7 @@
 					
 					<a class="borde" href="../pages/reserva.html">
 						<div class="card moto3 imagen__flota">
-							<img src="../img/moto3.png" class="card-img-top" alt="Scooter, color roja y negra, 78cc Monocilíndrico, 4 tiempos, 2 válvulas, OHC, refrigerado por aire">
+							<img src="../img/moto3.webp" class="card-img-top" alt="Scooter, color roja y negra, 78cc Monocilíndrico, 4 tiempos, 2 válvulas, OHC, refrigerado por aire">
 							<div class="card-body">
 							<p class="card-text auto__pie"><code>Scooter</code></p>
 							</div>
