--- a/pages/error404.html
+++ b/pages/error404.html
@@ -50,7 +50,7 @@
 
         <main class="errorMain">
             <section>
-                <div>
+                <div class="prueba">
                   <img class="errorImagen" src="../img/error404.webp" alt="mensaje de error, pagina no encontrada, regresar al menu anteior">
                 </div>
             </section>
@@ -58,7 +58,7 @@
 
         <!--inicio footer-->
 
-        <footer class="footer__error">
+        <footer>
             <div class="pie__footer">
                 <div>
                   <p>Seguinos en nuestras redes sociales:</p>
